dataset1235/2025-2/2868285114/users/1072499734/executions/3649835072_704983377.log
== SUBMISSION (2025-08-19 22:51:17)
-- CODE: 
X = int(input()))
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = Y * Y
pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:51:03)
-- CODE: 
X = int(input)))
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = Y * Y
pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:51:56)
-- CODE: 
X = int(input())
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:51:15)
-- CODE: 
X = int(input()))
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = Y * Y
pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    X = int(input()))
                    ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:52:17)
-- CODE: 
X = int(input())
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:51:26)
-- CODE: 
X = int(input())
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = Y * Y
pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:51:04)
-- CODE: 
X = int(input)))
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = Y * Y
pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 1
    X = int(input)))
                  ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:51:27)
-- CODE: 
X = int(input())
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = Y * Y
pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:52:18)
-- CODE: 
X = int(input())
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
Pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:51:57)
-- CODE: 
X = int(input())
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = X * Y
pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print (Pot)
           ^^^
NameError: name 'Pot' is not defined. Did you mean: 'pot'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:50:44)
-- CODE: 
X = int(input)
Y = int(input())
Q1 = X // Y
R = X % Y
Q2 = X / Y
Pr = Y * Y
pot = Y ** 3
print (Q1)
print (R)
print (Q2)
print (Pr)
print (Pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    X = int(input)
        ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    X = int(input)
        ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    X = int(input)
        ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    X = int(input)
        ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    X = int(input)
        ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    X = int(input)
        ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
